debhelper (13.5.3) UNRELEASED; urgency=medium

  * dh_assistant: Avoid creating `debian/.debhelper` when the
    which-build-system sub command is invoked.  Thanks to
    Jelmer Vernooĳ for spotting that bug.

 -- Niels Thykier <niels@thykier.net>  Sat, 25 Sep 2021 06:58:09 +0000

debhelper (13.5.2) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_installsystemd: Revert change to deploy systemd files into
    usr/lib/systemd.  (Closes: #993316, #993759)
  * dh_installinit: Ditto.
  * dh_systemd_enable: Ditto.
  * dh_systemd_start: Ditto.
  * SequencerUtil.pm: Remove duplicate "-a" option to some commands.
    Thanks to Christoph Berg for reporting the issue.
    (Closes: #971761)
  * dh_installdeb: Revert the change to rewrite `rm_conffiles` into
    `remove-on-upgrade` due to it causing bugs in non-trivial cases.
    (Closes: #994919)

  [ Christoph Berg ]
  * dh_installtmpfiles: Add missing option name in POD documentation.

 -- Niels Thykier <niels@thykier.net>  Thu, 23 Sep 2021 16:44:25 +0000

debhelper (13.5.1) unstable; urgency=medium

  [ Paul Wise ]
  * cmake.pm: make it possible to override dh provided ctest arguments

  [ Niels Thykier ]
  * cmake.pm: Add missing import which broke cmake related builds.
    Thanks to Boyuan Yang for reporting the issue.
    (Closes: #993345)

 -- Niels Thykier <niels@thykier.net>  Tue, 31 Aug 2021 05:43:35 +0000

debhelper (13.5) unstable; urgency=medium

  * dh_installdeb: Install debian/conffiles in compat 12+ again
    (undoing the compat 12 change saying dh_installdeb would ignore
    this file).  The file can now be using for the activating the
    `remove-on-upgrade` feature from dpkg 1.20.
  * dh_installdeb: Automatically rewrite `rm_conffiles` into the
    new `remove-on-upgrade` feature from dpkg when possible.
  * cmake.pm: Pass `ARGS+=--verbose` to make when running tests
    in the cmake+make variant except when "terse" is in
    DEB_BUILD_OPTIONS.  Thanks to Paul Wise for the suggestion.