@@ -3,6 +3,10 @@ debhelper (13.5.3) UNRELEASED; urgency=medium
   * dh_assistant: Avoid creating `debian/.debhelper` when the
     which-build-system sub command is invoked.  Thanks to
     Jelmer Vernooĳ for spotting that bug.
+  * dh_assistant: Add new active-compat-level command, which
+    outputs information about which compat level is declared
+    and active.  It also tells how the compat level was
+    declared.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 25 Sep 2021 06:58:09 +0000
 
